# probe-flasher

./: .gitignore  README.md  justfile
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml
backend/src/: lib.rs  stm32_uart.rs
frontend/: Cargo.toml  tauri.conf.json
frontend/capabilities/: default.json
frontend/icons/: icon.icns
frontend/src/: commands.rs  main.rs
frontend/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/ui/src/: App.svelte  app.css
