[package]
name = "probe-flasher"
version = "0.1.0"
edition = "2024"

[lib]
name = "probe_flasher"
path = "src/lib.rs"

[[bin]]
name = "probe-flasher"
path = "src/bin/probe-flasher.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive", "color"] }
ihex = "3.0.0"
serialport = "4.8.1"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
