[package]
name = "probe-flasher-gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "probe-flasher-gui"
path = "src/main.rs"

[dependencies]
probe-flasher = { path = "../backend" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.5", features = ["devtools"] }
tauri-plugin-dialog = "2.4.2"
chrono = "0.4.42"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
